fix(UserRatsTab-scss): add z-index to add-rat-form-container
HEY CLAPTON. IT WOULD HELP IF YOU ACTUALLY SAVED YOUR CHANGES!

--- a/client/scss/components/_user-rats-tab.scss
+++ b/client/scss/components/_user-rats-tab.scss
@@ -13,6 +13,7 @@
       position: absolute;
       right: -2px;
       top: 0px;
+      z-index: 50;
     }
   }
 
